<resources>
    <string name="app_name">Cocktail Bar</string>
    <string name="app_title">My cocktails</string>
    <string name="create_cock">Add your first cocktail here</string>
    <string name="cocktail_name">Cocktail name</string>
    <string name="supporting">Add title\n</string>
    <string name="supporting_description">Optional field\n</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="description">Description</string>
    <string name="recipe">Recipe</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cocktail_ti">Add ingredient\n</string>
    <string name="ingredient_s_name">Ingredient\'s name</string>
    <string name="add_title">Add title</string>
    <string name="edit">Edit</string>
    <string name="title">Title</string>
    <string name="cocktail_description">Cocktail description</string>
    <string name="cocktail_recipe">Cocktail recipe</string>
    <string name="name">Name</string>
    <string name="add_ingredient_name">Add ingredient name</string>
    <string name="ingredient_name">Ingredient name</string>
    <string name="add">Add</string>
    <string name="delimiter">―</string>
    <string name="girl_png_image">Girl png image</string>
    <string name="share">Share</string>
    <string name="cocktail_photo_description">Cocktail photo</string>
    <string name="share_icon_image_description">Share icon image</string>
    <string name="cocktail_information">Cocktail information</string>
    <string name="recipe_title">Recipe:</string>
    <string name="share_name">"I share a cocktail with a name is %1$s, "</string>
    <string name="share_description">"its description is %1$s "</string>
    <string name="share_recipe">and recipe is %1$s</string>
    <string name="camera_icon_description">Camera icon</string>
    <string name="add_icon_description">Add ingredient icon button</string>

</resources>