<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="40dp"
    android:elevation="12dp"
    android:layout_centerHorizontal="true"
    android:innerRadius="0dp"
    android:background="@null"
    android:shape="ring"
    android:thicknessRatio="1.9">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/cocktail_ti"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:lineSpacingExtra="-4sp"
        android:text="@string/cocktail_ti"
        android:textAppearance="@style/cocktail_ti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ingredients_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/name"
        app:boxCornerRadiusBottomEnd="28dp"
        app:boxCornerRadiusBottomStart="28dp"
        app:boxCornerRadiusTopEnd="28dp"
        app:boxCornerRadiusTopStart="28dp"
        app:expandedHintEnabled="false"
        app:helperText="@string/add_ingredient_name"
        app:hintTextAppearance="@style/text_hint_layout"
        app:layout_constraintEnd_toEndOf="@id/cocktail_ti"
        app:layout_constraintStart_toStartOf="@id/cocktail_ti"
        app:layout_constraintTop_toBottomOf="@id/cocktail_ti">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ingredient_edit_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/ingredient_name"
            android:maxLength="11"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#4B97FF"
        android:fontFamily="@font/didact_gothic"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="31sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ingredients_layout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/didact_gothic"
        android:text="@string/cancel"
        android:textColor="#4B97FF"
        android:textSize="31sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_save"
        app:strokeColor="#4B97FF"
        app:strokeWidth="2dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>