<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.welcome_cocktails.GreetingsFragment">

   <ImageView
       android:id="@+id/iv_avatar"
       android:layout_marginTop="33dp"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       android:src="@drawable/avatar_default"
       android:layout_marginStart="38dp"
       android:layout_marginEnd="38dp"
       android:layout_width="300dp"
       android:layout_height="300dp"
       android:contentDescription="@string/girl_png_image" />

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/app_title"
        android:layout_marginTop="15dp"
        android:textAppearance="@style/app_title"
        app:layout_constraintStart_toStartOf="@id/iv_avatar"
        app:layout_constraintEnd_toEndOf="@id/iv_avatar"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar" />

    <RelativeLayout
        app:layout_constraintEnd_toEndOf="@id/app_title"
        app:layout_constraintStart_toStartOf="@id/app_title"
        app:layout_constraintTop_toBottomOf="@id/app_title"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/container"
        android:layout_width="130dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp">

        <TextView
            android:id="@+id/create_cock"
            android:layout_width="130dp"
            android:layout_height="42dp"
            android:gravity="center"
            android:text="@string/create_cock"
            android:textAppearance="@style/create_cock" />

        <View
            android:layout_marginTop="60dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/arrow_1"
            android:layout_width="10dp"
            android:layout_height="36dp"
            android:background="@drawable/arrow_1"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_add_cocktail"
            app:cardCornerRadius="100dp"
            android:backgroundTint="@color/blue"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="105dp"
            android:layout_width="80dp"
            android:layout_height="80dp">

            <ImageView
                android:id="@+id/frame"
                android:layout_gravity="center"
                android:background="@drawable/frame"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/add_icon_description" />

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>