<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CreateCocktailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_photo"
            android:layout_width="216dp"
            android:layout_height="204dp"
            android:layout_marginTop="64dp"
            app:cardBackgroundColor="@color/gray_1"
            app:cardCornerRadius="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:scaleType="fitXY" />

            <View
                android:id="@+id/icon_camera"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:background="@drawable/frame_1" />

        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/text_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/title"
            app:boxCornerRadiusBottomEnd="28dp"
            app:boxCornerRadiusBottomStart="28dp"
            app:boxCornerRadiusTopEnd="28dp"
            app:boxCornerRadiusTopStart="28dp"
            app:expandedHintEnabled="false"
            app:helperText="@string/add_title"
            app:hintTextAppearance="@style/text_hint_layout"
            app:layout_constraintEnd_toEndOf="@id/cv_photo"
            app:layout_constraintStart_toStartOf="@id/cv_photo"
            app:layout_constraintTop_toBottomOf="@id/cv_photo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:hint="@string/cocktail_name"
                android:maxLength="11"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="184dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/description"
            app:boxCornerRadiusBottomEnd="28dp"
            app:boxCornerRadiusBottomStart="28dp"
            app:boxCornerRadiusTopEnd="28dp"
            app:boxCornerRadiusTopStart="28dp"
            app:expandedHintEnabled="false"
            app:helperText="@string/supporting_description"
            app:hintTextAppearance="@style/text_hint_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_field">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_edit_text"
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:gravity="top"
                android:hint="@string/cocktail_description"
                android:maxLength="300"
                android:textColorHint="@color/gray"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/scroll_recipe"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rc_recipe"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:itemCount="13"
                tools:listitem="@layout/recipe_item" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_add_recipe"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/white"
            android:src="@drawable/add_recipe"
            app:layout_constraintBottom_toBottomOf="@id/scroll_recipe"
            app:layout_constraintStart_toEndOf="@id/scroll_recipe"
            app:layout_constraintTop_toTopOf="@id/scroll_recipe" />

        <com.google.android.material.textfield.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/recipe"
            android:hint="@string/description"
            app:boxCornerRadiusBottomEnd="28dp"
            app:boxCornerRadiusBottomStart="28dp"
            app:boxCornerRadiusTopEnd="28dp"
            app:boxCornerRadiusTopStart="28dp"
            app:expandedHintEnabled="false"
            app:hintTextAppearance="@style/text_hint_layout"
            android:layout_width="match_parent"
            android:layout_height="184dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:helperText="@string/supporting_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scroll_recipe">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/recipe_edit_text"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:gravity="top"
                android:hint="@string/cocktail_recipe"
                android:maxLength="300"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#4B97FF"
            android:fontFamily="@font/didact_gothic"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="31sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recipe" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/didact_gothic"
            android:text="@string/cancel"
            android:textColor="#4B97FF"
            android:textSize="31sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_save"
            app:strokeColor="#4B97FF"
            app:strokeWidth="2dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>