<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="330dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rectangle_dialog"
    android:layout_gravity="center"
    android:layout_height="330dp">

    <TextView
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/cocktail_ti"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/cocktail_ti"
        android:textAppearance="@style/cocktail_ti"
        android:lineSpacingExtra="-4sp" />


    <com.google.android.material.textfield.TextInputLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/dialog_input_layout"
        style="@style/input_text"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@id/cocktail_ti"
        app:layout_constraintEnd_toEndOf="@id/cocktail_ti"
        app:layout_constraintStart_toStartOf="@id/cocktail_ti"
        android:background="@drawable/text_field_small_gray"
        android:hint="@string/ingredient_s_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ingredient"
            android:layout_width="313dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_text_input_edit_text"
            android:gravity="bottom"
            android:maxLength="11"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_marginTop="5dp"
        style="@style/supporting"
        android:text="@string/add_title"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/dialog_input_layout"
        app:layout_constraintStart_toStartOf="@id/dialog_input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/dialog_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="#4B97FF"
        android:fontFamily="@font/didact_gothic"
        android:text="Add"
        android:textColor="@color/white"
        android:textSize="31sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_save"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/didact_gothic"
        android:text="@string/cancel"
        android:textColor="#4B97FF"
        android:textSize="31sp"
        app:strokeColor="#4B97FF"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>